Bug fix from Eddie

--- a/CHANGES
+++ b/CHANGES
@@ -152,6 +152,16 @@ Update info from Vincenzo Lavorini:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+60c:
+
+Update info from Edward Karavakis:
+- Bug fix for a problem with copying a tmp directory, in __ship_queue_data()
+
+Update info from Wen Guan:
+- Bug fix in getCopyPrefixPath() for a problem with wrong paths in overflow jobs, problems seen at BNL (SiteInformation)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
