Avoiding reset of space token to default for group disk tokens

--- a/CHANGES
+++ b/CHANGES
@@ -162,6 +162,12 @@ Update info from Wen Guan:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+60d:
+
+Avoiding reset of space token to default for group disk tokens, in getProperSpaceTokenList() (Mover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
