--- a/CHANGES
+++ b/CHANGES
@@ -176,6 +176,8 @@ Replaced maxinputsize with maxwdir - 2000 in getMaxInputSize(). Requested by Ala
 Removed unused method testES() (RunJobEvent)
 Extracting error acronyms and diagnostics from AthenaMP yampl message in listener() (RunJobEvent)
 
+Update info from Edward Karavakis:
+- Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir (glexec_utils)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
