Replaced usages of region with cloud

--- a/CHANGES
+++ b/CHANGES
@@ -176,6 +176,10 @@ Replaced maxinputsize with maxwdir - 2000 in getMaxInputSize(). Requested by Ala
 Removed unused method testES() (RunJobEvent)
 Extracting error acronyms and diagnostics from AthenaMP yampl message in listener() (RunJobEvent)
 Now using getModernASetup() with AnalysisTransform setups in getJobExecutionCommand(); requested by Asoka de Silva (ATLASExperiment)
+Removed usage of 'region' in getProperSiterootAndCmtconfig() (ATLASExperiment)
+Removed getProperSiterootAndCmtconfigOld() (ATLASExperiment)
+Changed usage of 'region' to 'cloud', and replaced 'Nordugrid' with 'ND' in checkSpecialEnvVars(), getSwbase(), getRelease() (ATLASExperiment)
+Changed 'region' to 'cloud' in getProperASetup() (ATLASExperiment)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
