--- a/CHANGES
+++ b/CHANGES
@@ -193,6 +193,7 @@ Added event service and token extractor error codes:
 	ERR_TEINVALIDGUID: "Token Extractor error: Invalid GUID length",
 	ERR_TEWRONGGUID: "Token Extractor error: No tokens for this GUID"
 used by RunJobEvent::listener() (PilotErrors, RunJobEvent)
+Calling updateJobDefinition() from monitor_job() (Monitor)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
