RenamedgetAthenaMPSubprocess() to getSubprocess()

--- a/CHANGES
+++ b/CHANGES
@@ -197,6 +197,7 @@ Calling updateJobDefinition() from monitor_job() (Monitor)
 Created optional updateJobDefinition() used to manipulate the job object/file after download from dispatcher (Experiment, ATLASExperiment)
 Created readFile(), writeFile() (FileHandling)
 Now updating the job object and job definition file in updateJobDefinition() (ATLASExperiment)
+Renamed getAthenaMPSubprocess() to getSubprocess(), used by __main__() and getTokenExtractorProcess() (RunJobEvent)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
