--- a/CHANGES
+++ b/CHANGES
@@ -200,6 +200,7 @@ Now updating the job object and job definition file in updateJobDefinition() (AT
 Renamed getAthenaMPSubprocess() to getSubprocess(), used by __main__() and getTokenExtractorProcess() (RunJobEvent)
 Moved getSubprocess() from RunJobEvent to RunJob
 Moved getStdoutStderrFileObjects() from RunJobEvent to RunJob
+Created isMultiTrf(), used by setup(), executePayload() (RunJob)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
