--- a/CHANGES
+++ b/CHANGES
@@ -201,6 +201,7 @@ Renamed getAthenaMPSubprocess() to getSubprocess(), used by __main__() and getTo
 Moved getSubprocess() from RunJobEvent to RunJob
 Moved getStdoutStderrFileObjects() from RunJobEvent to RunJob
 Created isMultiTrf(), used by setup(), executePayload() (RunJob)
+Removed piping to stdout/err from getJobExecutionCommand() (ATLASExperiment)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
