--- a/CHANGES
+++ b/CHANGES
@@ -203,6 +203,7 @@ Moved getStdoutStderrFileObjects() from RunJobEvent to RunJob
 Created isMultiTrf(), used by setup(), executePayload() (RunJob)
 Removed piping to stdout/err from getJobExecutionCommand() (ATLASExperiment)
 Created tail() (FileHandling)
+Now using getSubprocess() in executePayload() instead of commands.getstatusoutput() to execute payload (RunJob)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
