--- a/CHANGES
+++ b/CHANGES
@@ -206,6 +206,7 @@ Created tail() (FileHandling)
 Now using getSubprocess() in executePayload() instead of commands.getstatusoutput() to execute payload (RunJob)
 Overwriting job.coreCount if ATHENA_PROC_NUMBER is set in getJobMetrics() (PandaServerClient)
 Overwriting job.coreCount if ATHENA_PROC_NUMBER is set in setJobDef() (Job)
+Created addMAKEFLAGS(), used by getJobExecutionCommand() (ATLASExperiment)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
