--- a/CHANGES
+++ b/CHANGES
@@ -208,6 +208,7 @@ Overwriting job.coreCount if ATHENA_PROC_NUMBER is set in getJobMetrics() (Panda
 Overwriting job.coreCount if ATHENA_PROC_NUMBER is set in setJobDef() (Job)
 Created addMAKEFLAGS(), used by getJobExecutionCommand() (ATLASExperiment)
 Test import of rucio.client (pilot)
+Always using default setup in setup(), i.e. CVMFS ROOT setup will always be used (xrdcpSiteMover)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
