--- a/CHANGES
+++ b/CHANGES
@@ -179,11 +179,9 @@ Extracting error acronyms and diagnostics from AthenaMP yampl message in listene
 Now using getModernASetup() with AnalysisTransform setups in getJobExecutionCommand(); requested by Asoka de Silva (ATLASExperiment)
 Removed usage of 'region' in getProperSiterootAndCmtconfig() (ATLASExperiment)
 Removed getProperSiterootAndCmtconfigOld() (ATLASExperiment)
-Changed usage of 'region' to 'cloud', and replaced 'Nordugrid' with 'ND' in checkSpecialEnvVars(), getSwbase(), getRelease() (ATLASExperiment)
 Changed 'region' to 'cloud' in getProperASetup() (ATLASExperiment)
 Removed unused region variable in getAnalysisRunCommand() (Experiment)
 Removed unused region variable in __main__() (RunJob, RunJobEvent, RunJobAnselm, RunJobEdison)
-Changed usage of 'region' to 'cloud', and replaced 'Nordugrid' with 'ND' in createFileMetadata() (RunJob, RunJobEvent)
 Removed unnecessary error handling around updateEventRange() call in asynchronousOutputStager() (RunJobEvent)
 Now forwarding failed error range to server, in listener() (RunJobEvent)
 Added event service and token extractor error codes:
@@ -210,6 +208,8 @@ Created addMAKEFLAGS(), used by getJobExecutionCommand() (ATLASExperiment)
 Test import of rucio.client (pilot)
 Always using default setup in setup(), i.e. CVMFS ROOT setup will always be used (xrdcpSiteMover)
 Created checkSpecialEnvVars(), used to set new env variable 'Nordugrid_pilot' which in turn is used to identidy Nordugrid in other pilot classes (NordugridATLASExperiment)
+Changed usage of 'region' to using env variable 'Nordugrid_pilot', and replaced 'Nordugrid' with 'ND' in checkSpecialEnvVars(), getSwbase(), getRelease() (ATLASExperiment)
+Changed usage of 'region' to 'cloud', and replaced 'Nordugrid' with new env variable 'Nordugrid_pilot' in createFileMetadata() (RunJob, RunJobEvent)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
