--- a/CHANGES
+++ b/CHANGES
@@ -210,6 +210,7 @@ Always using default setup in setup(), i.e. CVMFS ROOT setup will always be used
 Created checkSpecialEnvVars(), used to set new env variable 'Nordugrid_pilot' which in turn is used to identidy Nordugrid in other pilot classes (NordugridATLASExperiment)
 Changed usage of 'region' to using env variable 'Nordugrid_pilot', and replaced 'Nordugrid' with 'ND' in checkSpecialEnvVars(), getSwbase(), getRelease() (ATLASExperiment)
 Changed usage of 'region' to 'cloud', and replaced 'Nordugrid' with new env variable 'Nordugrid_pilot' in createFileMetadata() (RunJob, RunJobEvent)
+Changed usage of 'region' to new env variable 'Nordugrid_pilot' in createMetadataForOutput(), postJobTask() (JobLog)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
