Changed usage of region for Nordugrid

--- a/CHANGES
+++ b/CHANGES
@@ -216,6 +216,8 @@ Changed usage of 'region' to new env variable 'Nordugrid_pilot' in getRelease() 
 Changed usage of 'region' to new env variable 'Nordugrid_pilot' in getXML(), updatePandaServer() (PandaServerClient)
 Changed usage of 'region' to new env variable 'Nordugrid_pilot' in getDDMStorage(), getPoolFileCatalog(), getPoolFileCatalogDQ2(),
 getFileInfoFromMetadata() (Mover)
+Changed usage of 'region' to new env variable 'Nordugrid_pilot' in handleQueuedata() (pUtil)
+Setting new env variable 'Nordugrid_pilot' also in argParser() since it will be needed before the experiment object is created (pilot)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
