--- a/CHANGES
+++ b/CHANGES
@@ -218,6 +218,7 @@ Changed usage of 'region' to new env variable 'Nordugrid_pilot' in getDDMStorage
 getFileInfoFromMetadata() (Mover)
 Changed usage of 'region' to new env variable 'Nordugrid_pilot' in handleQueuedata() (pUtil)
 Setting new env variable 'Nordugrid_pilot' also in argParser() since it will be needed before the experiment object is created (pilot)
+Added "adler32" to if statement in getRemoteFileChecksumFromOutput() (xrdcpSiteMover)
 
 Update info from Edward Karavakis:
 - Now avoiding copying the glexec sandbox dir itself in the __ship_queue_data() from the PilotHomeDir, affecting jobs at ANALY_BNL_GLEXEC (glexec_utils)
