Avoiding setting ROOT_TTREECACHE_SIZE for production jobs

--- a/CHANGES
+++ b/CHANGES
@@ -168,6 +168,13 @@ Avoiding reset of space token to default for group disk tokens, in getProperSpac
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+60e:
+
+Now only setting ROOT_TTREECACHE_SIZE for user jobs in addEnvVars2Cmd() since it is causing memory problems in some production jobs (ATLASExperiment)
+-> "For reasons as yet unknown this causes the VMEM of the jobs to blow up by 2GB and most of them die with std::bad_alloc." (Graeme Stewart)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
