--- a/CHANGES
+++ b/CHANGES
@@ -234,7 +234,7 @@ Created shouldExecuteMemoryMonitor(), getMemoryMonitorJSONFilename() (Experiment
 Importing and using getExperiment() in getJobMetrics() (PandaServerClient)
 Importing and using getJSONDictionary() in getJobMetrics() (PandaServerClient)
 getJobMetrics() is now adding memory monitor JSON dictionary to job metrics (PandaServerClient)
-Copying any JSON file from the jobs' workdir to the pilots' init dir in cleanup() (RunJob)
+Copying any JSON file from the jobs' workdir to the pilots' init dir in executePayload() (RunJob)
 
 DQ2 API to Rucio API migration:
 - Replaced isTapeSite() function, now using the Rucio client to check whether the site is a tape site or not (SiteMover)
