Reverted to old ToA based isTapeSite()

--- a/CHANGES
+++ b/CHANGES
@@ -253,6 +253,12 @@ Change to AMSTaiwanExperiment:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+61b:
+
+Reverted to using the old ToA based isTapeSite() since the new Rucio based method caused too much load on the Rucio server (SiteMover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
