--- a/CHANGES
+++ b/CHANGES
@@ -98,6 +98,8 @@ Now verifying that a replica is not on TAPE before FAX can be used, in isFAXAllo
 Added url and stateReason to getInitialTracingReport() (Mover)
 Created prepareReport() that will replace the __sendReport() in the site movers (SiteMover)
 Setting tracing report stateReason and url in sitemover_get_data() (Mover)
+Updated error message "Encountered an empty SURL-GUID dictionary" to "Rucio returned an empty replica dictionary" in verifySURLGUIDDictionary() (Mover)
+Protection against triple slashes in updateRedirector() (FAXSiteMover)
 
 DQ2 API to Rucio API migration:
 - Created new support methods: extractScopeLFN(), getScopeLFNListFromDictionary(), getGUIDForLFN() used by the new getRucioReplicaDictionary() (Mover)
